# godopy

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CYTHON_INTRO.md  CYTHON_QUICKSTART.md  CYTHON_README.md  FUNDING.yml  LICENSE.md  MANIFEST.in  NOTES.md  PYTHON_INTRO.md  PYTHON_QUICKSTART.md  PYTHON_README.md  README.md  README.rst  ROADMAP.md  SConstruct  _SConstruct_backup  batteries.txt  binding_generator.py  bootstrap-requirements.txt  bootstrap.py  build_python.py  clean.sh  cpp_binding_generator.py  dev-requirements.txt  godot-tools-requirements.txt  internal-requirements.txt  internal_python_build.py  meta-requirements.txt  pxd_generator.py  reinstall_internal.sh  requirements.txt  scons_methods.py  setup-requirements.txt  setup.cfg  (+1 more)
_lib/: .gitignore  requirements.txt  setup.py
batteries/: setup.py
demo/: .gitignore  icon.svg.import  main.tscn  project.godot  test.py  test2.py
gdextension/: README.md  gdextension_interface.pxd
godot/: Bindings.pxd  Bindings.pyx  Godot.pxd  Godot.pyx  __icalls.pxd  __init__.py  _core.pxd  cli.py  core.pxd  core.pyx  core_cctypes.pxd  core_types.pxd  core_types.pyx  gdnative.pyx  gen.pxd  gen.pyx  globals.pxd  nativescript.pxd  nativescript.pyx  nodes.pyx  utils.pyx  version.py
godot-cpp/: SConstruct  SCsub
godot_cpp/: Bindings.pxd  CoreTypes.pxd  Global.pxd  __icalls.pxd  __init__.py  compiler.py  core.pxd  gen.pxd
godot_tools/: .gitignore  binding_generator.py  cli.py  pxd_writer.py  utils.py  version.py
internal-packages/: requirements.txt  setup.py
(+545 files in other folders)
