[metadata]
name = GodoPy
version = attr: godot_tools.__version__
url = https://github.com/godopy/godopy
author = Ivan Hilaire
author_email = ivhilaire@gmail.com
description = Python and Cython bindings to the Godot game engine.
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Artistic Software
    Topic :: Games/Entertainment
project_urls =
    Funding = https://www.patreon.com/godopy
    Source = https://github.com/godopy/godopy


[options]
python_requires = >=3.6
include_package_data = true
packages =
    godot_tools
    godot_tools.setup
    godot_tools.tests
    godot_tools.script_runner
    godot_tools.binding_generator
zip_safe = false
install_requires =
    Mako
    scons
    Click
setup_requires =
    scons
    Mako
    pycparser
    autopxd2

[options.entry_points]
console_scripts =
    godopy = godot_tools.cli:godopy
    bindgen = godot_tools.cli:bindgen

[flake8]
max-line-length = 159
